--- a/index.html
+++ b/index.html
@@ -2,60 +2,69 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Образовательные карточки</title>
+    <title>Учебные карточки</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Образовательные карточки</h1>
-
-<!-- АВТОРИЗАЦИЯ -->
-<div id="authArea">
-    <h2>Вход / регистрация</h2>
+<!-- ===== АВТОРИЗАЦИЯ ===== -->
+<div id="authArea" class="auth">
+    <h2>Вход / Регистрация</h2>
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Пароль">
-    <br><br>
-    <button onclick="register()">Зарегистрироваться</button>
-    <button onclick="login()">Войти</button>
+    <div class="auth-buttons">
+        <button onclick="login()">Войти</button>
+        <button onclick="register()">Создать аккаунт</button>
+    </div>
 </div>
 
-<!-- ПРИЛОЖЕНИЕ -->
-<div id="appArea" style="display:none;">
-    <p id="userInfo"></p>
-    <button onclick="logout()">Выйти</button>
+<!-- ===== ОСНОВНОЕ ПРИЛОЖЕНИЕ ===== -->
+<div id="appArea" style="display:none">
 
-    <hr>
+<header>
+    <div class="logo">
+        <span>🃏</span>
+        <div>Учебные карточки</div>
+    </div>
 
-    <h2>Создать папку</h2>
-    <input id="folderName" placeholder="Название папки">
-    <button onclick="createFolder()">Создать</button>
+    <div class="user-area">
+        <span id="userInfo"></span>
+        <button onclick="logout()">Выйти</button>
+    </div>
+</header>
 
-    <hr>
+<div class="container">
 
-    <h2>Папки</h2>
-    <ul id="foldersList"></ul>
+    <!-- ===== SIDEBAR ===== -->
+    <aside class="sidebar">
+        <h3>Папки</h3>
+        <input id="folderName" placeholder="Новая папка">
+        <button onclick="createFolder()">Добавить</button>
+        <ul id="foldersList"></ul>
+    </aside>
 
-    <hr>
-
-    <div id="folderArea" style="display:none;">
+    <!-- ===== MAIN ===== -->
+    <main class="main">
         <h2 id="currentFolderTitle"></h2>
 
-        <h3>Создать карточку</h3>
-        <input id="question" placeholder="Вопрос">
-        <input id="answer" placeholder="Ответ">
-        <button onclick="addCard()">Добавить</button>
+        <div class="cards-grid" id="cardsGrid"></div>
 
-        <hr>
-
-        <div id="cardArea"
-             onclick="flipCard()"
-             style="border:1px solid black; padding:20px; width:300px;">
-            Карточек нет
+        <div class="add-card">
+            <input id="question" placeholder="Вопрос">
+            <input id="answer" placeholder="Ответ">
+            <button onclick="addCard()">Добавить карточку</button>
         </div>
+    </main>
+</div>
 
-        <br>
-        <button onclick="prevCard()">←</button>
-        <button onclick="nextCard()">→</button>
-    </div>
+</div>
+
+<!-- ===== FULLSCREEN CARD ===== -->
+<div id="fullscreen" class="fullscreen-card" style="display:none">
+    <button class="nav left" onclick="prevCard()">⬅</button>
+    <div id="card" class="card" onclick="flipCard()"></div>
+    <button class="nav right" onclick="nextCard()">➡</button>
+    <button class="close" onclick="closeFullscreen()">✖</button>
 </div>
 
 <script src="script.js"></script>
