--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 
 <header>
     <div class="logo">
+        <div class="burger" onclick="toggleSidebar()">☰</div>
         <span>🃏</span>
         <div>Учебные карточки</div>
     </div>
+
 
     <div class="user-area">
         <span id="userInfo"></span>
@@ -70,3 +72,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
