--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
     <main class="main">
         <h2 id="currentFolderTitle"></h2>
 
-        <div class="cards-grid" id="cardsGrid" class="draggable-list"></div>
-
+        <!-- Форма добавления карточек -->
         <div class="add-card">
             <input id="question" placeholder="Вопрос">
             <input id="answer" placeholder="Ответ">
             <button onclick="addCard()">Добавить карточку</button>
-            <button onclick="deleteSelectedCards()">Удалить выбранные</button>
         </div>
+
+        <!-- Сетка карточек -->
+        <div class="cards-grid" id="cardsGrid" class="draggable-list"></div>
+
     </main>
 </div>
 
