--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <input id="email" placeholder="Email">
     <input id="password" type="password" placeholder="Пароль">
     <div class="auth-buttons">
-        <button onclick="login()">Войти</button>
-        <button onclick="register()">Создать аккаунт</button>
+        <button id="loginBtn">Войти</button>
+        <button id="registerBtn">Создать аккаунт</button>
     </div>
 </div>
 
@@ -38,24 +38,30 @@
     <aside class="sidebar">
         <h3>Папки</h3>
         <input id="folderName" placeholder="Новая папка">
-        <button onclick="createFolder()">Добавить</button>
-        <ul id="foldersList" class="draggable-list"></ul>
+        <button id="addFolderBtn">Добавить</button>
+        <ul id="foldersList"></ul>
     </aside>
 
     <!-- MAIN -->
     <main class="main">
-        <h2 id="currentFolderTitle"></h2>
+        <div class="folder-header">
+            <h2 id="currentFolderTitle">Название папки</h2>
+            <button id="folderCardMenuBtn">⋮</button>
+            <div id="cardActionsMenu" class="card-actions-menu">
+                <button id="editCardBtn">Редактировать карточку</button>
+                <button id="deleteCardBtn">Удалить</button>
+            </div>
+        </div>
 
         <!-- Форма добавления карточек -->
         <div class="add-card">
             <input id="question" placeholder="Вопрос">
             <input id="answer" placeholder="Ответ">
-            <button onclick="addCard()">Добавить карточку</button>
+            <button id="addCardBtn">Добавить карточку</button>
         </div>
 
         <!-- Сетка карточек -->
-        <div class="cards-grid" id="cardsGrid" class="draggable-list"></div>
-
+        <div class="cards-grid" id="cardsGrid"></div>
     </main>
 </div>
 
